--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -101,7 +101,10 @@ confidence and trust in the interface itself.
 
 ![Order confirmation page prior to the redesign](images/checkout-before.png)
 
-<Caption>Before: order confirmation page prior to the redesign</Caption>
+<Caption>
+  <span class="bx--type-semibold">Before:</span> order confirmation page prior
+  to the redesign
+</Caption>
 
 </Column>
 
@@ -109,7 +112,10 @@ confidence and trust in the interface itself.
 
 ![Order confirmation page after the redesign](images/checkout-after.png)
 
-<Caption>After: order confirmation page after the redesign</Caption>
+<Caption>
+  <span class="bx--type-semibold">After:</span> order confirmation page after
+  the redesign
+</Caption>
 
 </Column>
 </Row>
@@ -237,7 +243,8 @@ instead of taking the time to build out each element and component.
 ![Order confirmation page design](images/delivery.png)
 
 <Caption>
-  Before: the order confirmation screen design that was handed off to developers{' '}
+  <span class="bx--type-semibold">Before:</span> the order confirmation screen
+  design that was handed off to developers
 </Caption>
 
 </Column>
@@ -247,8 +254,8 @@ instead of taking the time to build out each element and component.
 ![Order confirmation page in production](images/in-prod.png)
 
 <Caption>
-  After: the order confirmation screen after in production at the end of the
-  sprint (plus two extra working days)
+  <span class="bx--type-semibold">After:</span> the order confirmation screen
+  after in production at the end of the sprint (plus two extra working days)
 </Caption>
 
 </Column>
