--- a/src/pages/case-studies/overview.mdx
+++ b/src/pages/case-studies/overview.mdx
@@ -1,31 +1,28 @@
 ---
 title: Overview
 description:
-  These case studies explore the adoption and implementation of Carbon in
-  products and digital experiences. We hope they build your understanding of how
-  Carbon can be applied in real-world products and inspire your own adoption of
-  Carbon.
+  We’re currently developing case studies to explore the adoption and
+  implementation of Carbon in products and digital experiences.
 ---
 
 <PageDescription>
 
-These case studies explore the adoption and implementation of Carbon in products
-and digital experiences. We hope they build your understanding of how Carbon can
-be applied to solve real-world challenges and that they inspire your own
-adoption of Carbon.
+We’re currently developing case studies to explore the adoption and
+implementation of Carbon in products and digital experiences.
 
 </PageDescription>
 
-## Case studies in progress
+## Introduction
 
-We are currently working on the following case studies and will share them as
-soon as they're available:
-
-- list item
-- Cloud
-- list item
+Our goal in creating case studies is two-fold. Firstly, we believe that by
+seeing how other teams have adopted Carbon and built workflows, you’ll be
+inspired by their methods for your own adoption of Carbon. Secondly, we aim to
+show you the true business value of using a design system, and how you can
+reduce time to market, by leveraging reductions in design, development, and
+testing time.
 
 ## Future case studies
 
-If you have an idea for a case study, or would like to contribute your own
-story, reach out and let us know. [email?]
+We have several case studies in progress, but if you have an idea for a case
+study, or would like to contribute your own story,
+[reach out to us](mailto:carbon@us.ibm.com) and let us know.
