fix(docs: motion / news & articles): fix accesesibility violations

--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -946,7 +946,7 @@ flexible panel expands when the user hovers over any portion of it. When
 flexible panels expand, they either condense both the content and the grid or
 they push content beyond the edge of the browser.
 
-<Video vimeoId="363369752" />
+<Video title="Usage" vimeoId="363369752" />
 
 ## Alignments
 
