--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -28,7 +28,7 @@ harmony through our User Interface design.
 
 </AnchorLinks>
 
-<Video vimeoId="281513790" />
+<Video title="Color Overview" vimeoId="281513790" />
 
 <br />
 
