--- a/src/pages/guidelines/motion/choreography.mdx
+++ b/src/pages/guidelines/motion/choreography.mdx
@@ -22,7 +22,7 @@ which never run diagonally.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} caption="When expanding or moving elements across the screen, stagger the timing of horizontal and vertical animations to create a path with a rounded corner.">
 
-<Video vimeoId="310582887" />
+<Video title="Paths staggering horizontally" vimeoId="310582887" />
 
 </DoDont>
 </DoDontRow>
@@ -32,7 +32,7 @@ which never run diagonally.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} type="dont" caption="Not staggering horizontal and vertical animations create a straight diagonal path. It breaks the grid and is harsh to the eye.">
 
-<Video vimeoId="310582699" />
+<Video title="Paths not staggering horizontally" vimeoId="310582699" />
 
 </DoDont>
 </DoDontRow>
@@ -42,12 +42,12 @@ which never run diagonally.
 <DoDontRow>
 <DoDont aspectRatio="1:1" caption="When removing an item from the grid, thumbnails on the edge existing and re-entering container create a smooth transition.">
 
-<Video vimeoId="310582738" />
+<Video title="Thumbnails with smooth transition" vimeoId="310582738" />
 
 </DoDont>
 <DoDont type="dont"  aspectRatio="1:1" caption="Thumbnails moving on diagonal paths feels sporadic and harsh.">
 
-<Video vimeoId="310582775" />
+<Video title="Thumbnails with sporadic transition" vimeoId="310582775" />
 
 </DoDont>
 </DoDontRow>
@@ -55,12 +55,12 @@ which never run diagonally.
 <DoDontRow>
 <DoDont aspectRatio="1:1"  caption="When sorting or shuffling items on the grid, always using rounded corner paths to visually organize the movements.">
 
-<Video vimeoId="310582816" />
+<Video title="organized sort and shuffle" vimeoId="310582816" />
 
 </DoDont>
 <DoDont type="dont" aspectRatio="1:1" caption="Criss cross sorting appears disorganized. Avoid this motion path.">
 
-<Video vimeoId="310582851" />
+<Video title="disorganized criss crossing" vimeoId="310582851" />
 
 </DoDont>
 </DoDontRow>
@@ -88,7 +88,7 @@ to their difference in size.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} caption="Comparing data table expansion and dropdown">
 
-<Video vimeoId="310581970" />
+<Video title="Semantic consistency" vimeoId="310581970" />
 
 </DoDont>
 </DoDontRow>
@@ -102,7 +102,7 @@ to clarify their respective spatial locations.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} caption="When the new content panel is on a higher layer, motion is “sliding”, moving content within with the panel.  Also always dim the content below when new layer is introduced above.">
 
-<Video vimeoId="310581999" />
+<Video title="Spatial consistency" vimeoId="310581999" />
 
 </DoDont>
 </DoDontRow>
@@ -110,7 +110,7 @@ to clarify their respective spatial locations.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} caption="When the new content panel is on the same layer, motion is “pushing”, revealing content within with a mask.">
 
-<Video vimeoId="310582064" />
+<Video title="new content panel" vimeoId="310582064" />
 
 </DoDont>
 </DoDontRow>
@@ -125,12 +125,12 @@ motion signals cancellation.
 <DoDontRow>
 <DoDont aspectRatio="1:1" caption="Use motion to reinforce meaning. Affirmative action here triggers a different exit motion for the modal than negation.">
 
-<Video vimeoId="310582134" />
+<Video title="Intentional inconsistency" vimeoId="310582134" />
 
 </DoDont>
 <DoDont type="dont" aspectRatio="1:1">
 
-<Video vimeoId="310582167" />
+<Video title="incorrect intentional inconsistency" vimeoId="310582167" />
 
 </DoDont>
 </DoDontRow>
@@ -144,7 +144,7 @@ buttons, to create a graceful transition.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} caption="Shared elements can effectively guide users through a multi-layered information architecture.">
 
-<Video vimeoId="310582206" />
+<Video title="Continuity" vimeoId="310582206" />
 
 </DoDont>
 </DoDontRow>
@@ -152,7 +152,7 @@ buttons, to create a graceful transition.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} type="dont" caption="Continuous elements are for guidance and should not distract. Always finish a sequence with the important content on page.">
 
-<Video vimeoId="310582279" />
+<Video title="Continuity should not distract" vimeoId="310582279" />
 
 </DoDont>
 </DoDontRow>
@@ -170,7 +170,7 @@ delay should be adjusted to ensure that total time is still within 500 ms.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} caption="Table with rows loading in at staggered timing.">
 
-<Video vimeoId="310582972" />
+<Video title="Sequence and stagger" vimeoId="310582972" />
 
 </DoDont>
 </DoDontRow>
@@ -183,7 +183,7 @@ user’s attention on them.
 <DoDontRow>
 <DoDont colLg={12} colMd={8} caption="Sequencing of this interface prioritizes the primary button, and reserves data visualization for later when users begin to scroll, indicating intention to dive deeper.">
 
-<Video vimeoId="310582919" />
+<Video title="Sequencing" vimeoId="310582919" />
 
 </DoDont>
 </DoDontRow>
