--- a/src/pages/community/patterns/create-flows/index.mdx
+++ b/src/pages/community/patterns/create-flows/index.mdx
@@ -140,7 +140,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Anatomy of a create side panel](images/SidePanelAnatomy.png)
+![Anatomy of a create side panel](images/SidePanelAnatomy.jpg)
 
 </Column>
 </Row>
@@ -159,7 +159,7 @@ respectively.
 <Row>
 <Column colLg={8}>
 
-![Alignment of a create side panel](images/SidePanelAlignment.png)
+![Alignment of a create side panel](images/SidePanelAlignment.jpg)
 
 </Column>
 </Row>
