docs: line break fix for anchor links

--- a/src/pages/contributing/pattern.mdx
+++ b/src/pages/contributing/pattern.mdx
@@ -45,9 +45,11 @@ Explain the pattern in one or two sentences.
 
 <AnchorLinks>
 
-<AnchorLink>Overview</AnchorLink> <AnchorLink>Designing with
-[pattern]</AnchorLink> <AnchorLink>Accessibility</AnchorLink>
-<AnchorLink>Related</AnchorLink> <AnchorLink>References</AnchorLink>
+<AnchorLink>Overview</AnchorLink>  
+<AnchorLink>Designing with [pattern]</AnchorLink>  
+<AnchorLink>Accessibility</AnchorLink>  
+<AnchorLink>Related</AnchorLink>  
+<AnchorLink>References</AnchorLink>  
 <AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
@@ -198,10 +200,12 @@ Explain the pattern in one or two sentences.
 
 <AnchorLinks>
 
-<AnchorLink>Overview</AnchorLink> <AnchorLink>Designing with
-[pattern]</AnchorLink> <AnchorLink>[Pattern] variant</AnchorLink>
-<AnchorLink>Accessibility</AnchorLink> <AnchorLink>Related</AnchorLink>
-<AnchorLink>References</AnchorLink> <AnchorLink>Feedback</AnchorLink>
+<AnchorLink>Overview</AnchorLink>  
+<AnchorLink>Designing with [pattern]</AnchorLink> <AnchorLink>[Pattern]
+variant</AnchorLink> <AnchorLink>Accessibility</AnchorLink>  
+<AnchorLink>Related</AnchorLink>  
+<AnchorLink>References</AnchorLink>  
+<AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
 
