fix line breaks

--- a/src/pages/contributing/pattern.mdx
+++ b/src/pages/contributing/pattern.mdx
@@ -201,8 +201,9 @@ Explain the pattern in one or two sentences.
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>  
-<AnchorLink>Designing with [pattern]</AnchorLink> <AnchorLink>[Pattern]
-variant</AnchorLink> <AnchorLink>Accessibility</AnchorLink>  
+<AnchorLink>Designing with [pattern]</AnchorLink>  
+<AnchorLink>[Pattern] variant</AnchorLink>  
+<AnchorLink>Accessibility</AnchorLink>  
 <AnchorLink>Related</AnchorLink>  
 <AnchorLink>References</AnchorLink>  
 <AnchorLink>Feedback</AnchorLink>
