docs(audit): updated link and list

--- a/src/pages/components/link/style.mdx
+++ b/src/pages/components/link/style.mdx
@@ -12,6 +12,14 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | ----------- | -------- | ----------- |
 | `.bx--link` | color    | `$link-01`  |
 
+<Row>
+<Column colLg={8}>
+
+![Examples of link and inline link](images/link-style-1.png)
+
+</Column>
+</Row>
+
 ### Interactive states
 
 | Class       | Property   | Color token           |
@@ -22,37 +30,49 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | `:visited`  | text color | `$visited-link`       |
 | `:disabled` | text color | `$disabled-02`        |
 
-<div className="image--fixed">
+<Row>
+<Column colLg={8}>
 
-![Example of enabled, hover, and disabled link states](images/link-style-1.png)
+![Examples of link and inline link states](images/link-style-2.png)
 
-</div>
-
-<Caption>Normal, hover, disabled link states</Caption>
+</Column>
+</Row>
 
 ## Typography
 
-Links should not exceed three words.
+There are three size variants for the link component: default, small, and large.
 
-| Property    | Font-size (px/rem) | Font-weight   | Text style       |
-| ----------- | ------------------ | ------------- | ---------------- |
-| `.bx--link` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Property        | Font-size (px/rem) | Font-weight   | Text style        |
+| --------------- | ------------------ | ------------- | ----------------- |
+| `.bx--link`     | 14 / 0.875         | Regular / 400 | `$body-short-01`  |
+| `.bx--link--sm` | 12 / 0.75          | Regular / 400 | `$helper-text-01` |
+| `.bx--link--lg` | 16 / 1             | Regular / 400 | `$body-short-02`  |
+
+<Row>
+<Column colLg={8}>
+
+![Examples of link sizes](images/link-style-4.png)
+
+</Column>
+</Row>
 
 ## Structure
 
 ### Recommended
 
-Links can be grouped horizontally or vertically and must be underlined. The
-following specs are not built into the Link component but are recommended by
-design as the proper distance between grouped Links.
+Links can be grouped horizontally or vertically. The following specs are not
+built into the link component but are recommended by design as the proper
+distance between grouped Links.
 
-| Class       | Property      | px / rem | Spacing token |
-| ----------- | ------------- | -------- | ------------- |
-| `.bx--link` | padding-right | 16 / 1   | `$spacing-05` |
+| Class       | Property       | px / rem | Spacing token |
+| ----------- | -------------- | -------- | ------------- |
+| `.bx--link` | padding-right  | 16 / 1   | `$spacing-05` |
+| `.bx--link` | padding-bottom | 4 / 0.25 | `$spacing-02` |
+| `.bx--link` | padding-bottom | 8 / 0.5  | `$spacing-03` |
 
 <div className="image--fixed">
 
-![Link structure and spacing measurements](images/link-style-2.png)
+![Link structure and spacing measurements](images/link-style-3.png)
 
 </div>
 
