--- a/src/pages/components/link/style.mdx
+++ b/src/pages/components/link/style.mdx
@@ -62,7 +62,7 @@ There are three size variants for the link component: default, small, and large.
 
 Links can be grouped horizontally or vertically. The following specs are not
 built into the link component but are recommended by design as the proper
-distance between grouped Links.
+distance between grouped links.
 
 | Class       | Property       | px / rem | Spacing token |
 | ----------- | -------------- | -------- | ------------- |
