--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -99,7 +99,7 @@ be used for navigational actions.
 
 There are three size variants for the link component: default, small, and large.
 The link size should match the type size of the text it is inline with. When
-using links apart from other content the link size should match the default body
+using links apart from other content, the link size should match the default body
 copy size of the page.
 
 <Row>
