--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -82,7 +82,7 @@ requirements, and determine next steps on requested components or functionality.
 
 <h2>
   Carbon Insiders
-  <span>First Thursdays, 9:00am–10:00am Central</span>
+  <span>First Thursdays, 9–10am Central</span>
 </h2>
 
 _For IBMers only:_ A monthly meeting for teams building on top of Carbon to
