--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -35,7 +35,7 @@ developing with Carbon. Next they replaced existing elements with Carbon
 components. Once all the components had been transitioned, the team focused on
 updating page structure and layout.
 
-Since the Carbon refresh, the team’s delivery cycle has sped up and they spend
+Since the Carbon implementation, the team’s delivery cycle has sped up and they spend
 less time on QA. Their product is now aligned with the
 other [IBM.com](http://ibm.com/) experiences that use Carbon,
 creating a consistency of experience. Their conversion rate increased by 5% and
