--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -83,7 +83,7 @@ compete in the marketplace.
 
 ### Carbon transition
 
-The Carbon refresh would make the interface more clear, meaning users wouldn’t
+The Carbon implementation would make the interface more clear, meaning users wouldn’t
 get lost in the flow and would be able to find what they needed. It also would
 align key pages before, during, and after the checkout process, creating a sense
 of continuity. The team hypothesized that as a result, users would be less
