--- a/src/pages/case-studies/overview.mdx
+++ b/src/pages/case-studies/overview.mdx
@@ -7,7 +7,7 @@ description:
 
 <PageDescription>
 
-We’re currently developing case studies to explore the adoption and
+We’re developing case studies to explore the adoption and
 implementation of Carbon in products and digital experiences.
 
 </PageDescription>
