--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -232,7 +232,7 @@ especially found value in the impact of their delivery speed and need for QA.
 
 ### Faster delivery
 
-The entire Carbon refresh took only three months and since the transition, the
+The entire process for implementing Carbon took only three months and since the transition, the
 team’s development cycle has sped up. By using Carbon, the developers are
 placing pre-built components and can therefore focus on more important issues
 instead of taking the time to build out each element and component.
