--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -95,6 +95,21 @@ be used for navigational actions.
 
 1. **Label:** Communicates what is being linked to.
 
+### Sizing
+
+There are three size variants for the link component: default, small, and large.
+The link size should match the type size of the text it is inline with. When
+using links apart from other content, the link size should match the default body
+copy size of the page.
+
+<Row>
+<Column colLg={8}>
+
+![Examples of link sizes](images/link-style-4.png)
+
+</Column>
+</Row>
+
 ## Content
 
 We recommend links be three words or fewer. Because links take users to a new
