resource card and heading updates

--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -21,7 +21,7 @@ of the new self-service purchase experience on IBM.com.
 <AnchorLink>Benefits</AnchorLink>
 <AnchorLink>Positive outcomes</AnchorLink>
 <AnchorLink>Next steps</AnchorLink>
-<AnchorLink>Related resources</AnchorLink>
+<AnchorLink>Resources</AnchorLink>
 
 </AnchorLinks>
 
@@ -35,14 +35,14 @@ developing with Carbon. Next they replaced existing elements with Carbon
 components. Once all the components had been transitioned, the team focused on
 updating page structure and layout.
 
-Since the Carbon implementation, the team’s delivery cycle has sped up and they spend
-less time on QA. Their product is now aligned with the
+Since the Carbon implementation, the team’s delivery cycle has sped up and
+they spend less time on QA. Their product is now aligned with the
 other [IBM.com](http://ibm.com/) experiences that use Carbon,
 creating a consistency of experience. Their conversion rate increased by 5% and
 more than 50% of customers are converting to purchase, which puts them on par
 with industry benchmarks.
 
-## The Challenge
+## The challenge
 
 ### Project goals
 
@@ -83,11 +83,11 @@ compete in the marketplace.
 
 ### Carbon transition
 
-The Carbon implementation would make the interface more clear, meaning users wouldn’t
-get lost in the flow and would be able to find what they needed. It also would
-align key pages before, during, and after the checkout process, creating a sense
-of continuity. The team hypothesized that as a result, users would be less
-likely to defect.
+The Carbon implementation would make the interface more clear, meaning users
+wouldn’t get lost in the flow and would be able to find what they needed. It
+also would align key pages before, during, and after the checkout process,
+creating a sense of continuity. The team hypothesized that as a result, users
+would be less likely to defect.
 
 The team mapped out their transition to Carbon, focusing at first on a core set
 of pages. While implementing Carbon components and aligning to the IBM Design
@@ -232,10 +232,11 @@ especially found value in the impact of their delivery speed and need for QA.
 
 ### Faster delivery
 
-The entire process for implementing Carbon took only three months and since the transition, the
-team’s development cycle has sped up. By using Carbon, the developers are
-placing pre-built components and can therefore focus on more important issues
-instead of taking the time to build out each element and component.
+The entire process for implementing Carbon took only three months and since the
+transition, the team’s development cycle has sped up. By using Carbon, the
+developers are placing pre-built components and can therefore focus on more
+important issues instead of taking the time to build out each element and
+component.
 
 <Row>
 <Column colLg={6}>
@@ -326,8 +327,18 @@ better aligning their interface with the
 [Carbon for IBM.com](https://www.ibm.com/standards/web/carbon-for-ibm-dotcom//)
 style models.
 
-## Related resources
+## Resources
 
-- [IBM.com](http://ibm.com/) makers, go to
-  [Carbon for IBM.com](https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/)
-  for resources to create pages for [IBM.com](http://ibm.com/).
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon for IBM.com"
+    href="https://www.ibm.com/standards/web/carbon-for-ibm-dotcom/"
+    >
+
+![Bee icon](images/bee.svg)
+
+  </ResourceCard>
+
+</Column>
+</Row>
