--- a/src/pages/components/inline-loading/style.mdx
+++ b/src/pages/components/inline-loading/style.mdx
@@ -7,20 +7,30 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                            | Property | Color token       |
-| -------------------------------- | -------- | ----------------- |
-| `.bx--loading__svg`              | stroke   | `$ui-03`          |
-| `.bx--inline-loading__checkmark` | color    | `$interactive-01` |
-| `.bx--inline-loading__text`      | color    | `$text-01`        |
+| Class                       | Property | Color token       |
+| --------------------------- | -------- | ----------------- |
+| `.bx--loading__background`  | stroke   | `$ui-03`          |
+| `.bx--loading__stroke`      | stroke   | `$interactive-04` |
+| `.bx--inline-loading__text` | color    | `$text-02`        |
+| `status: finished`          | svg      | `$support-02`     |
+| `status: finished`          | svg      | `$support-01`     |
+
+<Row>
+<Column colLg={8}>
+
+![Example of inline loading states](images/inline-loading-states.png)
+
+</Column>
+</Row>
 
 ## Typography
 
 Button text should be set in sentence case, with only the first word in a phrase
 and any proper nouns capitalized.
 
-| Class                       | Font-size (px/rem) | Font-weight   | Type token       |
-| --------------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--inline-loading__text` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Class                       | Font-size (px/rem) | Font-weight   | Type token  |
+| --------------------------- | ------------------ | ------------- | ----------- |
+| `.bx--inline-loading__text` | 12 / 0.75          | Regular / 400 | `$label-01` |
 
 ## Structure
 
