docs: final edits of headings and text

--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -14,10 +14,10 @@ of the new self-service purchase experience on IBM.com.
 
 <AnchorLinks>
 
-<AnchorLink>Summary</AnchorLink>
+<AnchorLink>Overview</AnchorLink>
 <AnchorLink>The challenge</AnchorLink>
-<AnchorLink>Proposed solution</AnchorLink>
-<AnchorLink>Our approach</AnchorLink>
+<AnchorLink>The proposed solution</AnchorLink>
+<AnchorLink>The approach</AnchorLink>
 <AnchorLink>Benefits</AnchorLink>
 <AnchorLink>Positive outcomes</AnchorLink>
 <AnchorLink>Next steps</AnchorLink>
@@ -25,30 +25,28 @@ of the new self-service purchase experience on IBM.com.
 
 </AnchorLinks>
 
-## Summary
+## Overview
 
-The [IBM.com](http://ibm.com/) Commerce Platform team spent 3 three months
-transitioning their checkout flow to use Carbon to improve their conversion rate
-and overall product experience. They took an iterative approach,
-starting first with small, isolated features to get comfortable designing and
-developing with Carbon. Next they replaced existing elements with Carbon
-components. Once all the components had been transitioned, the team focused on
-updating page structure and layout.
+The IBM.com Commerce Platform team spent three months transitioning their
+checkout flow to implement Carbon and improve their conversion rate and overall
+product experience. They took an iterative approach, starting first with small,
+isolated features to get comfortable designing and developing with Carbon. Next,
+they replaced existing elements with Carbon components. Once all the components
+had been transitioned, the team focused on updating page structures and layouts.
 
 Since the Carbon implementation, the team’s delivery cycle has sped up and
 they spend less time on QA. Their product is now aligned with the
-other [IBM.com](http://ibm.com/) experiences that use Carbon,
-creating a consistency of experience. Their conversion rate increased by 5% and
-more than 50% of customers are converting to purchase, which puts them on par
-with industry benchmarks.
+other IBM.com experiences that use Carbon, creating a consistency of experience.
+Their conversion rate increased by 5% and more than 50% of customers are
+converting to purchase, which puts them on par with industry benchmarks.
 
 ## The challenge
 
 ### Project goals
 
-The [IBM.com](http://ibm.com) Commerce Platform team had a mission — to improve
-the completion rate for their checkout flow. They knew there were usability
-issues in the checkout process but they also wanted to add new features.
+The IBM.com Commerce Platform team had a mission — to improve the completion
+rate for their checkout flow. They knew there were usability issues in the
+checkout process but they also wanted to add new features.
 
 By aligning their checkout flow with the Carbon Design System, they could add
 new features in a consistent way and make a lot of small improvements, which
@@ -79,15 +77,15 @@ pre-populate fields, which significantly reduced the number of clicks. The team
 used this project to strategically update their product to be able to better
 compete in the marketplace.
 
-## Proposed solution
+## The proposed solution
 
-### Carbon transition
+### Transitioning to Carbon
 
-The Carbon implementation would make the interface more clear, meaning users
-wouldn’t get lost in the flow and would be able to find what they needed. It
-also would align key pages before, during, and after the checkout process,
-creating a sense of continuity. The team hypothesized that as a result, users
-would be less likely to defect.
+Implementing Carbon would make the interface more clear, meaning users would no
+longer get lost in the flow and would be able to find what they needed. It would
+also align key pages before, during, and after the checkout process, creating a
+sense of continuity. The team hypothesized that as a result, users would be less
+likely to defect.
 
 The team mapped out their transition to Carbon, focusing at first on a core set
 of pages. While implementing Carbon components and aligning to the IBM Design
@@ -102,8 +100,8 @@ confidence and trust in the interface itself.
 ![Order confirmation page prior to the redesign](images/checkout-before.png)
 
 <Caption>
-  <span class="bx--type-semibold">Before:</span> order confirmation page prior
-  to the redesign
+  <span class="bx--type-semibold">Before:</span> Order confirmation page prior
+  to the redesign.
 </Caption>
 
 </Column>
@@ -113,14 +111,14 @@ confidence and trust in the interface itself.
 ![Order confirmation page after the redesign](images/checkout-after.png)
 
 <Caption>
-  <span class="bx--type-semibold">After:</span> order confirmation page after
-  the redesign
+  <span class="bx--type-semibold">After:</span> Order confirmation page after
+  the redesign.
 </Caption>
 
 </Column>
 </Row>
 
-### High value features
+### Identifying high value features
 
 The second part of the solution was identifying high impact features they could
 implement in tandem with the Carbon transition. Many of these features were
@@ -136,11 +134,11 @@ up on invalid addresses, making the experience better for everyone.
 
 The transition to Carbon was an iterative process. Rather than updating the
 entire UI at one time, the Commerce Platform team transitioned their product
-slowly and tactfully. By adopting Carbon iteratively, they were able to see
+slowly and tactically. By adopting Carbon iteratively, they were able to see
 which changes made substantial impacts and use that to inform their roadmap and
 subsequent changes.
 
-### Educate on the design system
+### Learning the design system
 
 Before jumping into adopting Carbon, it was important to spend time learning
 about and getting comfortable with Carbon. Shixie Shi Trofimov, the design lead
@@ -154,14 +152,14 @@ same language as they worked through a set of design specifications.
 ![Carbon token quiz](images/token-quiz.png)
 
 <Caption>
-  Carbon token quiz that helped get developers comfortable with Carbon token
-  naming conventions.
+  A Carbon token quiz helped get developers comfortable with Carbon token naming
+  conventions.
 </Caption>
 
 </Column>
 </Row>
 
-### Start small
+### Starting small
 
 The adoption process started with one modal. Instead of redesigning an existing
 feature, they identified a high value, self-contained, new feature to develop
@@ -185,7 +183,7 @@ getting up to speed.
 </Column>
 </Row>
 
-### Mix new with old
+### Mixing new with old
 
 The first new Carbon modal was placed on an existing page. It was an easy way
 for the team to get started and begin shipping new pieces. Mixing new with old
@@ -197,7 +195,7 @@ experiences meant that got the team to their final result faster.
 <Video vimeoId="488148768" />
 <Caption>New modal sitting on the original page</Caption>
 
-### Iterate, iterate, iterate
+### Iterating, iterating, iterating
 
 Rather than updating all of the pages at once, the team took an iterative
 approach. By starting with fresh features that integrated with the old UI, the
@@ -217,8 +215,8 @@ only three months.
 ![Checkout screen in January 2020, April 2020, and the future design](images/iterate.png)
 
 <Caption>
-  From left to right: checkout screen in January 2020 before the transition,
-  April 2020 after the transition, and the future design.
+  From left to right: The checkout screen in January 2020 before the transition,
+  in April 2020 after the transition, and the future design.
 </Caption>
 
 </Column>
@@ -244,8 +242,8 @@ component.
 ![Order confirmation page design](images/delivery.png)
 
 <Caption>
-  <span class="bx--type-semibold">Before:</span> the order confirmation screen
-  design that was handed off to developers
+  <span class="bx--type-semibold">Before:</span> The order confirmation screen
+  design that was handed off to developers.
 </Caption>
 
 </Column>
@@ -255,8 +253,8 @@ component.
 ![Order confirmation page in production](images/in-prod.png)
 
 <Caption>
-  <span class="bx--type-semibold">After:</span> the order confirmation screen
-  after in production at the end of the sprint (plus two extra working days)
+  <span class="bx--type-semibold">After:</span> The order confirmation screen in
+  production at the end of the sprint.
 </Caption>
 
 </Column>
@@ -267,7 +265,7 @@ component.
 Once the team had been fully onboarded to Carbon, delivery required only minimal
 design QA because they were using components straight out of the box.
 
-### Continuity in experience
+### Continuity in user experience
 
 The project vastly improved the continuity in user experience with other IBM
 touchpoints, including Support and My IBM. These experiences now feel continuous
@@ -306,8 +304,9 @@ same way, providing familiarity and a feeling of dependability.
 ![Profile page](images/continuity-4.png)
 
 <Caption>
-  Continuity in experiences using Carbon for IBM.com. From top to bottom:
-  Product configuration, Checkout, Confirmation, and Profile.
+  From top to bottom: Product configuration, Checkout, Confirmation, and
+  Profile. These pages illustrate the continuity in experience gained by using
+  Carbon for IBM.com.
 </Caption>
 
 </Column>
