--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -35,7 +35,7 @@ they replaced existing elements with Carbon components. Once all the components
 had been transitioned, the team focused on updating page structures and layouts.
 
 Since the Carbon implementation, the team’s delivery cycle has sped up and
-they spend less time on QA. Their product is now aligned with the
+they spend less time on quality assurance. Their product is now aligned with the
 other IBM.com experiences that use Carbon, creating a consistency of experience.
 Their conversion rate increased by 5% and more than 50% of customers are
 converting to purchase, which puts them on par with industry benchmarks.
@@ -133,10 +133,10 @@ up on invalid addresses, making the experience better for everyone.
 ## The approach
 
 The transition to Carbon was an iterative process. Rather than updating the
-entire UI at one time, the Commerce Platform team transitioned their product
-slowly and tactically. By adopting Carbon iteratively, they were able to see
-which changes made substantial impacts and use that to inform their roadmap and
-subsequent changes.
+entire interface at one time, the Commerce Platform team transitioned their
+product slowly and tactically. By adopting Carbon iteratively, they were able to
+see which changes made substantial impacts and use that to inform their roadmap
+and subsequent changes.
 
 ### Learning the design system
 
@@ -198,8 +198,8 @@ experiences meant that got the team to their final result faster.
 ### Iterating, iterating, iterating
 
 Rather than updating all of the pages at once, the team took an iterative
-approach. By starting with fresh features that integrated with the old UI, the
-team could ship pieces iteratively.
+approach. By starting with fresh features that integrated with the old
+interface, the team could ship pieces iteratively.
 
 The first stage involved switching individual components to their Carbon
 version, starting with input fields then buttons. After transitioning the
@@ -226,7 +226,8 @@ only three months.
 
 There have been several benefits from the transition to Carbon for both the
 Commerce team's own workflow and process, and the user experience. The team
-especially found value in the impact of their delivery speed and need for QA.
+especially found value in the impact of their delivery speed and need for
+quality assurance.
 
 ### Faster delivery
 
@@ -260,10 +261,11 @@ component.
 </Column>
 </Row>
 
-### Minimal QA
+### Minimal quality assurance
 
 Once the team had been fully onboarded to Carbon, delivery required only minimal
-design QA because they were using components straight out of the box.
+design quality assurance because they were using components straight out of the
+box.
 
 ### Continuity in user experience
 
