content: case study copy edits

--- a/src/pages/case-studies/ibm-commerce-platform.mdx
+++ b/src/pages/case-studies/ibm-commerce-platform.mdx
@@ -261,10 +261,10 @@ component.
 </Column>
 </Row>
 
-### Minimal quality assurance
+### Minimal quality assurance testing
 
 Once the team had been fully onboarded to Carbon, delivery required only minimal
-design quality assurance because they were using components straight out of the
+quality assurance testing because they were using components straight out of the
 box.
 
 ### Continuity in user experience
