--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -27,7 +27,7 @@ peers, and getting reviews on work in progress.
 
 <h2>
   Weekly design playback
-  <span>Fridays, 12–1pm Central</span>
+  <span>Fridays, 12pm–1pm Central</span>
 </h2>
 
 _For IBMers only:_ You’ve got some work in progress and you’re ready to open it
@@ -82,7 +82,7 @@ requirements, and determine next steps on requested components or functionality.
 
 <h2>
   Carbon Insiders
-  <span>First Thursdays, 9–10am Central</span>
+  <span>First Thursdays, 9am–10am Central</span>
 </h2>
 
 _For IBMers only:_ A monthly meeting for teams building on top of Carbon to
